# sdl_earth_viewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/imgui/: CMakeLists.txt
shaders/: atmosphere.frag  axes.frag  axes.vert  fullscreen.vert  space.frag  tileset.frag  tileset.vert
src/: camera.cpp  camera.hpp  config.hpp  debug_group.cpp  debug_group.hpp  log_sink.hpp  main.cpp  prepare_renderer_resources.cpp  prepare_renderer_resources.hpp  shader.cpp  shader.hpp  task_processor.cpp  task_processor.hpp  tileset.cpp  tileset.hpp
